# TradingOS

./: .env.example  .gitignore  DECISION_LOG.md  EXECUTION_PLAN.md  MISSING_AND_OPEN_ITEMS.md  Makefile  PACKAGE_CHANGELOG.md  PACKAGE_INTEGRITY_MANIFEST.md  PACKAGE_README.md  PROJECT_STATE.md  README-dev.md  RESEARCH_BACKLOG.md  TODO.md  TRADING_OS_NORTH_STAR.md  pyproject.toml
audits/: ARCHITECTURE_COMPLETENESS_AUDIT.md  PLANNING_HANDOFF_SIMULATION.md  RED_TEAM_PLAN_REVIEW.md  TODO_COMPLETENESS_AUDIT.md
decisions/: CODING_AGENT_READINESS_GATE_V1.md  CRYPTO_SPOT_VENUE_AND_DATA_MATRIX_V1.md  INITIAL_REUSE_MATRIX.md  PROTOTYPE_EVIDENCE_DECISION.md
engines/: build_envs.sh
graphify-out/: GRAPH_REPORT.md  manifest.json
handoffs/: CONTINUE_S2_2026-07-11_VALIDATION_DIMENSIONS_COMPLETE.md  CONTINUE_S2_AUTONOMOUS_LAB_2026-07-10.md  HANDOFF_SIMULATION_AUDIT_V1.md  START_HERE_SINGLE_CODING_AGENT_PROMPT.md
ops/: install_daily_update.sh  run_daily_update.sh
raw/: arxiv_2501_10709.md  www_kraken_com_learn_futures-trading-funding-rate-arbitrage.md
research/: DICTIONARY_CONCEPTS_V1.json  EXISTING_CAPABILITY_REGISTRY.md  EXISTING_STRATEGY_REGISTRY_V0.md  EXISTING_STRATEGY_REGISTRY_V1.md  EXTERNAL_REPLAY_HYPOTHESES_V1.yaml  EXTERNAL_SOURCE_INTAKE_PLANS_V1.yaml  EXTERNAL_SOURCE_PUBLIC_CAPTURE_V1.yaml  PRIMARY_STRATEGY_RESEARCH_SOURCES_V1.yaml  RESEARCH_ASSETS_V1.json  RESEARCH_GAP_MATRIX.md  RESEARCH_HYPOTHESES_V1.yaml  SOURCE_REGISTRY.md
scripts/: analyze_b2_parity.py  assemble_temporal_validation.py  backtest_human_view.py  bootstrap.py  build_bakeoff_report.py  build_benchmark_comparison.py  build_cost_sensitivity.py  build_external_source_intake_snapshots.py  build_parity_report.py  build_regime_report.py  build_s3_s4_readiness_artifacts.py  build_validation_package.py  build_validation_plans.py  data_profile.py  prepare_freqtrade_validation_run.py  (+23 more)
(+1013 files in other folders)
