[project]
name = "tios"
version = "0.1.0"
description = "Trading Intelligence OS — modular monolith (S1 prototype)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4",
    "hypothesis>=6.135",
    "ruff>=0.12",
    "mypy>=1.16",
    "pip-audit>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tios"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src/tios"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
