[project]
name = "tios"
version = "0.1.0"
description = "Trading Intelligence OS — modular monolith (S1 prototype)"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "pyarrow>=20",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "hypothesis>=6.135",
    "ruff>=0.12",
    "mypy>=1.16",
    "pip-audit>=2.9",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tios"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src/tios"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "duckdb.*"]
ignore_missing_imports = true

# pyarrow ships partially-typed code; calls into it trip strict no-untyped-call,
# and its submodule re-exports trip attr-defined
[[tool.mypy.overrides]]
module = ["tios.dataset.*"]
disallow_untyped_calls = false
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
